fixed footer padding on mobile

--- a/assets/less/jomi/content.less
+++ b/assets/less/jomi/content.less
@@ -73,6 +73,7 @@
    padding-right: 0px;
    padding-left: 0px;
    padding-top: 0px;
+   margin-bottom: 0px;
    background: rgba(0, 0, 0, 0.0) !important;
    h1{
       color: #fff;
@@ -132,7 +133,7 @@
    padding: 50px 25px;
    padding-top: 25px;
    margin: 0 auto;
-   margin-bottom:30px;
+   //margin-bottom:30px;
 }
 
 .preprint {
