--- a/assets/less/jomi/footer.less
+++ b/assets/less/jomi/footer.less
@@ -1,26 +1,19 @@
 //* FOOTER
 
-.content-info { 
-   a{
-      color: #fff;
-      &:hover{
-         color: #808080;
-      }
-
-}
-
 // standard footer
-footer .footer{
-   a{
-      color: #fff;
-      &:hover{
-         color: #808080;
+footer.content-info {
+   padding: 10px 15px;
+
+   .footer{
+      a{
+         color: #fff;
+         &:hover{
+            color: #808080;
+         }
       }
-   }
-   border-top:solid 1px #424242; 
-   padding: 10px 20px;
-   ul.social-icons li {
-      margin-bottom: 0px;
+      ul.social-icons li {
+         margin-bottom: 0px;
+      }
    }
 }
 
@@ -107,7 +100,6 @@ footer.front-footer{
    }
 
 //* MOBILE
-}
 /* Small devices (tablets, 768px and up) */
 @media (min-width: 768px) { 
    footer{
